[package]
name = "crablendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
ctrlc = "3.2.4"
reqwest = { version = "0.11.13", features = ["cookies"] }
tokio = { version = "1.24.1", features = ["macros"] }
